Task4: Add DetailedFraudDetector class and test job for enhanced fraud detection logic based on transaction patterns. Update README.md with implementation details and usage instructions for the new functionality.